Update Open Graph description and RSVP text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Ajustada según pedido:
 
     <!-- Open Graph -->
     <meta property="og:title" content="🎀 Cumple de Rocío — Hello Kitty" />
-    <meta property="og:description" content="Rocío cumple 6 y te invita a un cumple lleno de moñitos y gatitos 🩷" />
+    <meta property="og:description" content="Rocío cumple 6 y te invita a su cumple 🩷" />
     <meta property="og:type" content="website" />
     <!-- cambiás esto por una imagen tuya -->
     <meta property="og:image" content="imagenes/preview-kitty.jpg" />
@@ -208,7 +208,7 @@ Ajustada según pedido:
         <!-- Confirmar asistencia -->
         <article class="card" data-aos="fade-up" data-aos-delay="240" id="rsvp">
           <h3><i class="ri-ticket-2-line"></i> Confirmar asistencia</h3>
-          <p>¿Venís al cumple de Rocío? Avisale a mamá 😉</p>
+          <p>¿Venís al cumple de Rocío? Avisale a mamá</p>
           <button class="btn btn-primario" id="abrirModal" type="button">
             <i class="ri-whatsapp-line"></i> Confirmar por WhatsApp
           </button>
